:ok_hand: [#1007] PR feedback
* move a bunch of ZGW specific code to dedicated directories/files
* clean up objects API plugin register submission
* refactor internal informatieobjecttypen endpoint to use zgw utilities
