# src/openforms/registrations/api/views.py
@@ -1,19 +1,15 @@
 from django.utils.translation import gettext_lazy as _
 
 from drf_spectacular.utils import extend_schema, extend_schema_view
-from furl import furl
 from rest_framework import authentication, permissions
 from rest_framework.views import APIView
 
-from openforms.registrations.contrib.zgw_apis.models import ZgwConfig
 from openforms.utils.api.views import ListMixin
 
 from ..constants import RegistrationAttribute
 from ..registry import register
 from .serializers import (
     ChoiceWrapper,
-    InformatieObjectTypeSerializer,
-    InformatieObjectTypeWrapper,
     RegistrationAttributeSerializer,
     RegistrationPluginSerializer,
 )
@@ -54,62 +50,3 @@ class AllAttributesListView(ListMixin, APIView):
         choices = RegistrationAttribute.choices
 
         return [ChoiceWrapper(choice) for choice in choices]
-
-
-@extend_schema_view(
-    get=extend_schema(summary=_("List available InformatieObjectTypen")),
-)
-class InformatieObjectTypenListView(ListMixin, APIView):
-    """
-    List the available InformatieObjectTypen.
-    """
-
-    authentication_classes = (authentication.SessionAuthentication,)
-    permission_classes = (permissions.IsAdminUser,)
-    serializer_class = InformatieObjectTypeSerializer
-
-    def get_objects(self):
-        config = ZgwConfig().get_solo()
-
-        if not config.ztc_service:
-            return []
-
-        client = config.ztc_service.build_client()
-
-        catalogus_mapping = {}
-        query_params = {}
-        while True:
-            catalogi_data = client.list("catalogus", query_params=query_params)
-            catalogus_mapping.update(
-                {c["url"]: c["domein"] for c in catalogi_data["results"]}
-            )
-
-            if catalogi_data["next"]:
-                url = furl(catalogi_data["next"])
-                query_params = url.query.params
-            else:
-                break
-
-        iotypen = []
-        query_params = {}
-        while True:
-            iotypen_data = client.list(
-                "informatieobjecttype", query_params=query_params
-            )
-            iotypen += [
-                InformatieObjectTypeWrapper(
-                    (
-                        iotype["omschrijving"],
-                        iotype["url"],
-                        catalogus_mapping[iotype["catalogus"]],
-                    )
-                )
-                for iotype in iotypen_data["results"]
-            ]
-
-            if iotypen_data["next"]:
-                url = furl(iotypen_data["next"])
-                query_params = url.query.params
-            else:
-                break
-        return iotypen
